# iq_eq_test

./: README.md  manage.py  pyproject.toml
api/: models.py  serializers.py  services.py  urls.py  views.py
api/migrations/: 0001_initial.py
iq_eq_testapp/: asgi.py  settings.py  wsgi.py
